; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_ui.c_set_formats.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_ui.c_set_formats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i8* }

@conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@ERR_FORMAT_NO_TIME_FMT_DLG = common dso_local global i8* null, align 8
@ERR_FORMAT_NO_DATE_FMT_DLG = common dso_local global i8* null, align 8
@ERR_FORMAT_NO_LOG_FMT_DLG = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*, i8*)* @set_formats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @set_formats(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %7, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %15, label %10

10:                                               ; preds = %3
  %11 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 2), align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %15, label %13

13:                                               ; preds = %10
  %14 = load i8*, i8** @ERR_FORMAT_NO_TIME_FMT_DLG, align 8
  store i8* %14, i8** %4, align 8
  br label %57

15:                                               ; preds = %10, %3
  %16 = load i8*, i8** %5, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %23, label %18

18:                                               ; preds = %15
  %19 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 1), align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %23, label %21

21:                                               ; preds = %18
  %22 = load i8*, i8** @ERR_FORMAT_NO_DATE_FMT_DLG, align 8
  store i8* %22, i8** %4, align 8
  br label %57

23:                                               ; preds = %18, %15
  %24 = load i8*, i8** %6, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %31, label %26

26:                                               ; preds = %23
  %27 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %31, label %29

29:                                               ; preds = %26
  %30 = load i8*, i8** @ERR_FORMAT_NO_LOG_FMT_DLG, align 8
  store i8* %30, i8** %4, align 8
  br label %57

31:                                               ; preds = %26, %23
  %32 = load i8*, i8** %7, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %34, label %39

34:                                               ; preds = %31
  %35 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 2), align 8
  %36 = call i32 @free(i8* %35)
  %37 = load i8*, i8** %7, align 8
  %38 = call i8* @unescape_str(i8* %37)
  store i8* %38, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 2), align 8
  br label %39

39:                                               ; preds = %34, %31
  %40 = load i8*, i8** %5, align 8
  %41 = icmp ne i8* %40, null
  br i1 %41, label %42, label %47

42:                                               ; preds = %39
  %43 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 1), align 8
  %44 = call i32 @free(i8* %43)
  %45 = load i8*, i8** %5, align 8
  %46 = call i8* @unescape_str(i8* %45)
  store i8* %46, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 1), align 8
  br label %47

47:                                               ; preds = %42, %39
  %48 = load i8*, i8** %6, align 8
  %49 = icmp ne i8* %48, null
  br i1 %49, label %50, label %55

50:                                               ; preds = %47
  %51 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  %52 = call i32 @free(i8* %51)
  %53 = load i8*, i8** %6, align 8
  %54 = call i8* @unescape_str(i8* %53)
  store i8* %54, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  br label %55

55:                                               ; preds = %50, %47
  %56 = call i32 (...) @set_spec_date_format()
  store i8* null, i8** %4, align 8
  br label %57

57:                                               ; preds = %55, %29, %21, %13
  %58 = load i8*, i8** %4, align 8
  ret i8* %58
}

declare dso_local i32 @free(i8*) #1

declare dso_local i8* @unescape_str(i8*) #1

declare dso_local i32 @set_spec_date_format(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
